same as last commit with changes

--- a/src/PhotoFolder.Infrastructure/PhotoFolder.Infrastructure.csproj
+++ b/src/PhotoFolder.Infrastructure/PhotoFolder.Infrastructure.csproj
@@ -18,5 +18,9 @@
     <ProjectReference Include="..\PhotoFolder.Core\PhotoFolder.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
   <Import Project="../nullable.props" />
 </Project>
