--- a/src/PhotoFolder.Core/PhotoFolder.Core.csproj
+++ b/src/PhotoFolder.Core/PhotoFolder.Core.csproj
@@ -1,9 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">  <PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="autofac" Version="4.9.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dto\GatewayResponses\Repositories\" />
   </ItemGroup>
 
   <Import Project="../nullable.props" />
