--- a/test/PhotoFolder.Infrastructure.Tests/PhotoFolder.Infrastructure.Tests.csproj
+++ b/test/PhotoFolder.Infrastructure.Tests/PhotoFolder.Infrastructure.Tests.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\*.*" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Remove="Resources\egypt_sonyz3.jpg" />
+    <None Remove="Resources\hanszimmer_htcu11.jpg" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
