Move application tests to test folder

--- a/test/PhotoFolder.Application.Tests/PhotoFolder.Application.Tests.csproj
+++ b/test/PhotoFolder.Application.Tests/PhotoFolder.Application.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PhotoFolder.Application\PhotoFolder.Application.csproj" />
+    <ProjectReference Include="..\..\src\PhotoFolder.Application\PhotoFolder.Application.csproj" />
   </ItemGroup>
 
 </Project>
