Working on decision manager

--- a/src/PhotoFolder.Wpf/PhotoFolder.Wpf.csproj
+++ b/src/PhotoFolder.Wpf/PhotoFolder.Wpf.csproj
@@ -9,7 +9,16 @@
   <Import Project="../nullable.props" />
 
   <ItemGroup>
+    <None Remove="Resources\Colors.xaml" />
+    <None Remove="Resources\Styles.xaml" />
+    <None Remove="Resources\VisualStudioIcons.xaml" />
     <None Remove="Views\ConfigureFolderDialog.xaml" />
+    <None Remove="Views\DecisionManagerDetailsView.xaml" />
+    <None Remove="Views\DecisionManagerDialog.xaml" />
+    <None Remove="Views\DecisionManagerListView.xaml" />
+    <None Remove="Views\DecisionManagerMenuView.xaml" />
+    <None Remove="Views\DecisionManager\FileDecisionIcon.xaml" />
+    <None Remove="Views\DecisionManager\FileDecisionText.xaml" />
   </ItemGroup>
 
   <ItemGroup>
