--- a/test/PhotoFolder.Application.IntegrationTests/PhotoFolder.Application.IntegrationTests.csproj
+++ b/test/PhotoFolder.Application.IntegrationTests/PhotoFolder.Application.IntegrationTests.csproj
@@ -17,6 +17,8 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.XUnit" Version="1.0.21" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="Moq" Version="4.12.0" />
