add formerly deleted issue

--- a/src/PhotoFolder.Wpf/PhotoFolder.Wpf.csproj
+++ b/src/PhotoFolder.Wpf/PhotoFolder.Wpf.csproj
@@ -9,7 +9,12 @@
   <Import Project="../nullable.props" />
 
   <ItemGroup>
+    <None Remove="Views\DecisionFormerlyDeletedView.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="3.0.3" />
+    <PackageReference Include="Humanizer.Core" Version="2.6.2" />
     <PackageReference Include="MahApps.Metro" Version="2.0.0-alpha0455" />
     <PackageReference Include="Prism.DryIoc" Version="7.2.0.1367" />
     <PackageReference Include="Prism.Wpf" Version="7.2.0.1367" />
