--- a/test/PhotoFolder.Application.IntegrationTests/PhotoFolder.Application.IntegrationTests.csproj
+++ b/test/PhotoFolder.Application.IntegrationTests/PhotoFolder.Application.IntegrationTests.csproj
@@ -16,13 +16,16 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.4.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Sinks.XUnit" Version="1.0.21" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Moq" Version="4.12.0" />
-    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="6.0.15" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="6.0.23" />
   </ItemGroup>
 
   <ItemGroup>
