add review dialog

--- a/src/PhotoFolder.Wpf/PhotoFolder.Wpf.csproj
+++ b/src/PhotoFolder.Wpf/PhotoFolder.Wpf.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <None Remove="Views\DecisionFormerlyDeletedView.xaml" />
+    <None Remove="Views\Decision\OperationView.xaml" />
+    <None Remove="Views\ReviewOperationsDialog.xaml" />
   </ItemGroup>
 
   <ItemGroup>
