--- a/src/PhotoFolder.Application/PhotoFolder.Application.csproj
+++ b/src/PhotoFolder.Application/PhotoFolder.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="6.0.23" />
   </ItemGroup>
 
   <ItemGroup>
