--- a/test/PhotoFolder.Wpf.Tests/PhotoFolder.Wpf.Tests.csproj
+++ b/test/PhotoFolder.Wpf.Tests/PhotoFolder.Wpf.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="6.0.23" />
+    <PackageReference Include="Moq" Version="4.12.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
